--- a/英国.md
+++ b/英国.md
@@ -32,12 +32,10 @@
 <li><a href="#manchester">Manchester</a></li>
 <li><a href="#bath">Bath</a></li>
 <li><a href="#lake-district">Lake District</a></li>
+<li><a href="#交通">交通</a></li>
 </ul>
 </li>
 </ul>
-
-    </div>
-  </div>
   <div class="stackedit__right">
     <div class="stackedit__html">
       <h1 id="uk旅行">UK旅行</h1>
@@ -97,9 +95,15 @@ Trainline app 火车票<br>
 <h2 id="manchester">Manchester</h2>
 <h2 id="bath">Bath</h2>
 <h2 id="lake-district">Lake District</h2>
+<h2 id="交通">交通</h2>
+  <a href="http://www.mafengwo.cn/gonglve/ziyouxing/278110.html">介绍</a>
+  <p> 地铁
+伦敦的交通网络划分为了9个区。其中1和2区是市中心，主要景点都在1区。伦敦地铁非常发达，出行建议乘坐地铁。
+运营时间：5:00-00:30（周日 07:30-23:30）
+票价：建议购买Oyster Card牡蛎卡，比现金购买便宜一半且有当日上限封顶价（乘车超过一定次数价格达到上限后不再扣款）。可以在地铁站自动售票机、游客中心等购买。</p>
+  <p>巴士
+伦敦的红色双层巴士也是一大特色，伦敦巴士的路线也非常多，如果想乘坐巴士，可以先在Google Maps查好路线，不接受现金，必须刷Oyster卡。</p>
 
-    </div>
-  </div>
 </body>
 
 </html>
